WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
128607
[WinCairo] Compile error related to toString function.
https://bugs.webkit.org/show_bug.cgi?id=128607
Summary
[WinCairo] Compile error related to toString function.
peavo
Reported
2014-02-11 09:04:04 PST
While compiling WinCairo, I get compile errors in WebView.cpp: WebKit\WebKitBuild\Debug_WinCairo\Include\private\wtf/PrintStream.h(277): error C2039: 'dump' : is not a member of 'WebCore::BString' (..\..\win\WebView.cpp) WebKit\WebKitBuild\Debug_WinCairo\Include\private\wtf/StringPrintStream.h(106) : see reference to function template instantiation 'void WTF::PrintStream::print(const T &)' being compiled with [ T=WebCore::BString ] ..\..\win\WebView.cpp(2768) : see reference to function template instantiation 'WTF::String WTF::toString(const T &)' being compiled with [ T=WebCore::BString ]
Attachments
Patch
(1.13 KB, patch)
2014-02-11 09:06 PST
,
peavo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2014-02-11 09:06:17 PST
Created
attachment 223872
[details]
Patch
Csaba Osztrogonác
Comment 2
2014-02-11 09:12:33 PST
***
Bug 128606
has been marked as a duplicate of this bug. ***
WebKit Commit Bot
Comment 3
2014-02-11 09:45:51 PST
Comment on
attachment 223872
[details]
Patch Clearing flags on attachment: 223872 Committed
r163885
: <
http://trac.webkit.org/changeset/163885
>
WebKit Commit Bot
Comment 4
2014-02-11 09:45:52 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug