[WinCairo] Compile error related to toString function. https://bugs.webkit.org/show_bug.cgi?id=128607

Patch by peavo@outlook.com <peavo@outlook.com> on 2014-02-11
Reviewed by Brent Fulgham.

* WebView.cpp:
(toString): Added another toString function to make sure we are not trying to use WTF::toString.

Canonical link: https://commits.webkit.org/146635@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163885 268f45cc-cd09-0410-ab3c-d52691b4dbfc